# TAPLite4MPO

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  USER_GUIDE.md  USER_GUIDE_VOL2_MPO.md  build.sh  pyproject.toml  setup.py
.claude/skills/taplite4mpo-pipeline/: SKILL.md
.github/workflows/: ci.yml  wheels.yml
docs/: ARCHITECTURE.md  DATASET_LADDER.md  GATE_PLAN_VDF.md  GOLDEN_PATH_CHECKLIST.md  IMAGE_PROMPTS.md  MPO_ONBOARDING_GUIDE.md  PRODUCTIONIZATION.md  compress_the_response.tex  design_turn_restrictions_issue3.md  four_step_integration.md  od_compression_operators.tex  onboarding_guide.html  peak_load_factor.md  qvdf_congestion_duration.md  superzone_design_principles.md
docs/mpo_spec/: DTALite_TAPLite_design_guideline.md  DTALite_unified_traffic_assignment_spec.md  MPO_assignment_kernel_references.md  README.md  agency_conformance_matrix.csv  agency_conformance_matrix.md
docs/reference/: FFX134_BD_VDF_INVENTORY.md  NVTA_FFX134_MULTIMODE_RESULTS.md  NVTA_SUBAREA_BENCHMARK_RESULTS.md  NVTA_SUBAREA_CONIC_PIPELINE.md
dtalite_qa/: README.md  __init__.py  __main__.py  accessibility.py  adapt.py  control.py  convlog.py  csvio.py  demandbin.py  fill.py  guide.py  intake.py  inventory.py  mag_vdf.py  manifest.py  nexta.py  plf.py  report.py  schema.py  skim.py  superzone.py  superzone_encoders.py  superzone_hier.py  validate.py  workflow.py
dtalite_qa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dtalite_qa/templates/: mpo_submission_template.yml
examples/: pytaplite_quickstart.py
examples/arc_atlanta/: ARC_BENCHMARK.md  ARC_DTALite_kernel_requirements.md  README.md  README_GMNS.md  SUPERZONE.md  arc_am_ref_volume.csv  arc_atlanta_to_gmns.py  arc_benchmark.py  arc_calibrate.py  arc_demand_to_csv.py  arc_skim.py  arc_superzone.py  arc_validate_run.py
examples/arc_atlanta/arc-Shape/arc-Shape/: AMLink2020.shp  AMLink2020.shx
examples/arc_atlanta/gmns/: demand_hov2.csv  demand_hov3.csv  intake_dashboard.html  intake_issues.json  intake_log.md  mode_type.csv  node.csv  submission.yml
kernel/: CMakeLists.txt
kernel/data_sets/01_4_node_network/: link.csv
kernel/data_sets/02_Sioux_Falls/: TAP_log.csv  destination_accessibility.csv  google_maps_od_distance.csv  inaccessible_od.csv  origin_accessibility.csv  summary_log_file.txt
kernel/python/: CMakeLists.txt  binding.cpp  build_native.sh  build_shared.sh
kernel/src/: TAPLite.cpp
nvta_run/: README.md  data_root.py  mode_type.csv  prep_network.py  run_nvta.py  run_subarea_conic.py  settings_10iter.csv  settings_1iter.csv  settings_20iter.csv  stage_conic.py  stage_plf.py  stage_qvdf.py
pytaplite/: README.md  __init__.py  kernel.py
schemas/: gmns_dtalite_schema.json
test_networks/: TEST_PLAN.md  build_multimodal.py  run_regression.py  test_harness.py  validate_inputs.py
test_networks/4_node_network/: demand.csv  link.csv  mode_type.csv  node.csv  settings.csv
test_networks/I10_corridor_QVDF/: calibration_spreadsheet_I-10_Phoenix.xlsx  demand.csv  link.csv  settings.csv
test_networks/I10_corridor_QVDF_1lane/: link.csv  settings.csv
test_networks/I10_corridor_QVDF_2lane/: demand.csv  link.csv
test_networks/I10_corridor_QVDF_multilane/: README.md  demand.csv  link.csv  node.csv  settings.csv
test_networks/cs_multimodal/: apv_cs.csv  com_cs.csv  hov2_cs.csv  hov3_cs.csv  link.csv  lp_10iter.csv  lp_1iter.csv  lp_20iter.csv  mode_type.csv  settings_10iter.csv  settings_20iter.csv  sov_cs.csv  trk_cs.csv
test_networks/multilane_bpr/: demand.csv  link.csv  node.csv  settings.csv
test_networks/qvdf_reference/: QVDF_clean_reference.xlsx  qvdf_ref.py
test_networks/sf_conic/: apv_sf.csv  link.csv  lp_1iter.csv
test_networks/sf_multimodal/: com_sf.csv  hov2_sf.csv  hov3_sf.csv  link.csv  lp_10iter.csv  lp_20iter.csv  mode_type.csv  node.csv  settings_1iter.csv  sov_sf.csv  trk_sf.csv
test_networks/subarea_conic/FFX134_BD/: link.csv  node.csv  s.bak  settings.csv
test_networks/subarea_conic/FFX134_NB/: demand.csv  link.csv
test_networks/subarea_conic/LDN034_BD/: demand.csv  mode_type.csv  settings.csv
test_networks/subarea_conic/LDN034_NB/: link.csv  node.csv
test_networks/turn_restriction/: README.md  demand.csv  link.csv  movement.csv  node.csv  settings.csv
